bdr.BDR.scala.error
Erreur de compilation :
BDR:5: error: not found: value R
    if (litMessage() == R) {
                        ^